set first_name and last_name as standard marker
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/st_address_map/trunk@65336 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/static/template.html
+++ b/static/template.html
@@ -9,7 +9,7 @@
 	###JSOUTPUT###
 	<!-- ###ROW### -->
 		<div class="tx_staddressmap_addresslist_item">
-			<b>###NAME### ###LAST_NAME###</b><br />
+			<b>###FIRST_NAME### ###LAST_NAME###</b><br />
 			###ADDRESS###
 			###ZIP### ###CITY###
 			
